--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "install-all": "npm run install-cli && npm run install-extension && npm run install-viewer",
-    "install-cli": "cd ./lighthouse-cli && npm install",
+    "install-cli": "cd ./lighthouse-cli && npm install && npm build",
     "install-extension": "cd ./lighthouse-extension && npm install",
     "install-viewer": "cd ./lighthouse-viewer && npm install",
     "build-all": "npm run build-cli && npm run build-extension && npm run build-viewer",
@@ -68,6 +68,7 @@
     "rimraf": "2.2.8",
     "semver": "5.3.0",
     "speedline": "1.0.3",
+    "update-notifier": "^2.1.0",
     "whatwg-url": "4.0.0",
     "ws": "1.1.1",
     "yargs": "3.32.0"
