core: add type checking to connection (#4738)

--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --config-path=./lighthouse-core/config/mixed-content.js"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.60",
     "@types/configstore": "^2.1.1",
     "@types/inquirer": "^0.0.35",
     "@types/node": "*",
     "@types/opn": "^3.0.28",
     "@types/update-notifier": "^1.0.2",
+    "@types/ws": "^4.0.1",
     "@types/yargs": "^8.0.2",
     "babel-core": "^6.16.0",
     "bundlesize": "^0.14.4",
@@ -75,7 +77,7 @@
     "mocha": "^3.2.0",
     "npm-run-posix-or-windows": "^2.0.2",
     "sinon": "^2.3.5",
-    "typescript": "^2.6.1",
+    "typescript": "2.7.2",
     "zone.js": "^0.7.3"
   },
   "dependencies": {
