--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
   "include": [
     "lighthouse-cli/**/*.js",
     "lighthouse-core/lib/dependency-graph/**/*.js",
+    "lighthouse-core/gather/connections/**/*.js",
     "./typings/externs.d.ts"
   ],
   "exclude": [
