core: add type checking to audit and gatherer base classes (#4762)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,10 @@
   },
   "include": [
     "lighthouse-cli/**/*.js",
+    "lighthouse-core/audits/audit.js",
     "lighthouse-core/lib/dependency-graph/**/*.js",
     "lighthouse-core/gather/connections/**/*.js",
+    "lighthouse-core/gather/gatherers/gatherer.js",
     "./typings/externs.d.ts"
   ],
   "exclude": [
