--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "mocha": "^3.2.0",
     "npm-run-posix-or-windows": "^2.0.2",
     "sinon": "^2.3.5",
-    "typescript": "2.7.2",
+    "typescript": "^2.8.0-rc",
     "zone.js": "^0.7.3"
   },
   "dependencies": {
