--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "lighthouse-core/lib/dependency-graph/**/*.js",
     "lighthouse-core/gather/connections/**/*.js",
     "lighthouse-core/gather/gatherers/gatherer.js",
-    "./typings/externs.d.ts"
+    "./typings/*.d.ts"
   ],
   "exclude": [
     "lighthouse-cli/test/**/*.js"
