--- a/lighthouse-extension/package.json
+++ b/lighthouse-extension/package.json
@@ -25,5 +25,8 @@
     "run-sequence": "^1.1.5",
     "through2": "^2.0.1"
   },
+  "resolutions": {
+    "browserify/insert-module-globals/lexical-scope/astw": "2.2.0"
+  },
   "dependencies": {}
 }
