--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "plots-smoke": "bash plots/test/smoke.sh",
     "changelog": "conventional-changelog --config ./build/changelog-generator/index.js --infile changelog.md --same-file",
     "type-check": "tsc -p .",
-    "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --config-path=./lighthouse-core/config/mixed-content.js"
+    "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --config-path=./lighthouse-core/config/mixed-content.js",
+    "prepare": "patch-package"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.60",
@@ -76,6 +77,7 @@
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "npm-run-posix-or-windows": "^2.0.2",
+    "postinstall-prepare": "^1.0.1",
     "sinon": "^2.3.5",
     "typescript": "^2.8.0-rc",
     "vscode-chrome-debug-core": "^3.23.8",
@@ -98,6 +100,7 @@
     "mkdirp": "0.5.1",
     "opn": "4.0.2",
     "parse-cache-control": "1.0.1",
+    "patch-package": "^5.1.1",
     "raven": "^2.2.1",
     "rimraf": "^2.6.1",
     "robots-parser": "^1.0.2",
