--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "debug": "node --inspect-brk ./lighthouse-cli/index.js",
     "start": "node ./lighthouse-cli/index.js",
     "test": "yarn lint --quiet && yarn unit && yarn type-check && yarn closure",
+    "test-extension": "cd lighthouse-extension && yarn test",
     "unit-core": "bash lighthouse-core/scripts/run-mocha.sh --core",
     "unit-cli": "bash lighthouse-core/scripts/run-mocha.sh --cli",
     "unit-viewer": "bash lighthouse-core/scripts/run-mocha.sh --viewer",
@@ -78,6 +79,7 @@
     "mocha": "^3.2.0",
     "npm-run-posix-or-windows": "^2.0.2",
     "postinstall-prepare": "^1.0.1",
+    "puppeteer": "^1.1.1",
     "sinon": "^2.3.5",
     "typescript": "^2.8.0-rc",
     "vscode-chrome-debug-core": "^3.23.8",
