tests(fixtures): introduce update-report-fixtures script (#4793)
Adding `yarn run update:sample-artifacts` and `yarn run update:sample-json`

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ last-run-results.html
 *.report.pretty
 *.artifacts.log
 
+!lighthouse-core/test/results/artifacts/*.trace.json
+!lighthouse-core/test/results/artifacts/*.devtoolslog.json
+
 latest-run
 
 closure-error.log
