--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "lighthouse-core/lib/dependency-graph/**/*.js",
     "lighthouse-core/gather/connections/**/*.js",
     "lighthouse-core/gather/gatherers/gatherer.js",
+    "lighthouse-core/scripts/*.js",
     "./typings/*.d.ts"
   ],
   "exclude": [
