--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,8 @@ script:
   - yarn test-extension
   # _JAVA_OPTIONS is breaking parsing of compiler output. See #3338.
   - unset _JAVA_OPTIONS
-  - yarn compile-devtools
+  # FIXME(paulirish): re-enable after a roll of LH->CDT
+  # - yarn compile-devtools
 before_cache:
   # the `yarn compile-devtools` task adds these to node_modules, which slows down caching
   - rm -rf ./node_modules/temp-devtoolsfrontend/
