--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "lighthouse-core/gather/connections/**/*.js",
     "lighthouse-core/gather/gatherers/gatherer.js",
     "lighthouse-core/scripts/*.js",
+    "lighthouse-core/audits/seo/robots-txt.js",
     "./typings/*.d.ts"
   ],
   "exclude": [
