--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "type-check": "tsc -p .",
     "update:sample-artifacts": "node lighthouse-core/scripts/update-report-fixtures.js -G",
     "update:sample-json": "node ./lighthouse-cli -A=./lighthouse-core/test/results/artifacts --output=json --output-path=./lighthouse-core/test/results/sample_v2.json http://localhost/dobetterweb/dbw_tester.html",
-    "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --config-path=./lighthouse-core/config/mixed-content.js",
-    "prepare": "patch-package"
+    "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --config-path=./lighthouse-core/config/mixed-content.js"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.60",
@@ -104,10 +103,9 @@
     "mkdirp": "0.5.1",
     "opn": "4.0.2",
     "parse-cache-control": "1.0.1",
-    "patch-package": "^5.1.1",
     "raven": "^2.2.1",
     "rimraf": "^2.6.1",
-    "robots-parser": "^1.0.2",
+    "robots-parser": "^2.0.1",
     "semver": "^5.3.0",
     "speedline": "1.3.0",
     "update-notifier": "^2.1.0",
