--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "type-check": "tsc -p .",
     "update:sample-artifacts": "node lighthouse-core/scripts/update-report-fixtures.js -G",
     "update:sample-json": "node ./lighthouse-cli -A=./lighthouse-core/test/results/artifacts --output=json --output-path=./lighthouse-core/test/results/sample_v2.json http://localhost/dobetterweb/dbw_tester.html",
+    "update:crdp-typings": "node lighthouse-core/scripts/extract-crdp-mapping.js",
     "mixed-content": "./lighthouse-cli/index.js --chrome-flags='--headless' --config-path=./lighthouse-core/config/mixed-content.js"
   },
   "devDependencies": {
@@ -82,7 +83,7 @@
     "postinstall-prepare": "^1.0.1",
     "puppeteer": "^1.1.1",
     "sinon": "^2.3.5",
-    "typescript": "^2.8.0-rc",
+    "typescript": "2.9.0-dev.20180323",
     "vscode-chrome-debug-core": "^3.23.8",
     "zone.js": "^0.7.3"
   },
