--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "lighthouse-core/audits/audit.js",
     "lighthouse-core/lib/dependency-graph/**/*.js",
     "lighthouse-core/lib/emulation.js",
+    "lighthouse-core/gather/computed/metrics/*.js",
     "lighthouse-core/gather/connections/**/*.js",
     "lighthouse-core/gather/gatherers/gatherer.js",
     "lighthouse-core/scripts/*.js",
