--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "commitizen": "^2.9.6",
     "conventional-changelog-cli": "^1.3.4",
     "coveralls": "^2.11.9",
+    "csv-validator": "^0.0.3",
     "cz-customizable": "^5.2.0",
     "eslint": "^4.8.0",
     "eslint-config-google": "^0.9.1",
