tests(smokehouse): run smoketests in parallel (#4748)
* Replaced those gnarly `run-test.sh` scripts with a flexible JS-based smoketest runner. Runs each `smokehouse.js` invocation in its own child-process.
* Moved a run of `dbw-expectations` into `offline`, as it was testing the exact same URL, just asserting different aspects out the output.
* `yarn smoke` will run all, but you can do `yarn smoke byte` and `yarn smoke byte ttci` to run individual smokehouse expectations
* Split the PWA smoketests into two files (`pwa` and `pwa2`), as they were some of the slowest smoketests we did.
* `yarn smokehouse` was removed. it's effectively replaced with `yarn smoke pwa && yarn smoke pwa2`
* Restore the `shop.polymer-project.org` smoketest. 
  * Add a workaround for #4898, since it reproduces in this test.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "build-viewer": "cd ./lighthouse-viewer && yarn build",
     "clean": "rimraf *.report.html *.report.dom.html *.report.json *.screenshots.html *.screenshots.json *.devtoolslog.json *.trace.json || true",
     "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
-    "smoke": "bash lighthouse-cli/test/smokehouse/run-all-tests.sh",
+
+    "smoke": "node lighthouse-cli/test/smokehouse/run-smoke.js",
+
     "debug": "node --inspect-brk ./lighthouse-cli/index.js",
     "start": "node ./lighthouse-cli/index.js",
     "test": "yarn lint --quiet && yarn unit && yarn type-check && yarn closure",
