--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - yarn type-check
   - yarn closure
   - yarn diff:sample-json
-  - yarn smoke
+  - yarn smoke:silentcoverage
   - yarn test-extension
   # _JAVA_OPTIONS is breaking parsing of compiler output. See #3338.
   - unset _JAVA_OPTIONS
@@ -49,5 +49,6 @@ before_cache:
   - rm -rf ./node_modules/temp-devtoolsprotocol/
 after_success:
   - yarn coveralls
+  - yarn codecov
 addons:
   chrome: stable
