--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "devtools": "bash lighthouse-core/scripts/roll-to-devtools.sh",
     "compile-devtools": "bash lighthouse-core/scripts/compile-against-devtools.sh",
     "chrome": "node lighthouse-core/scripts/manual-chrome-launcher.js",
-    "fast": "yarn start --disable-device-emulation --disable-cpu-throttling --disable-network-throttling",
+    "fast": "yarn start --disable-device-emulation --throttlingMethod=provided",
     "smokehouse": "node lighthouse-cli/test/smokehouse/smokehouse.js",
     "deploy-viewer": "cd lighthouse-viewer && gulp deploy",
     "bundlesize": "bundlesize",
