--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
     "lighthouse-core/lib/emulation.js",
     "lighthouse-core/gather/computed/metrics/*.js",
     "lighthouse-core/gather/connections/**/*.js",
-    "lighthouse-core/gather/gatherers/*.js",
-    "lighthouse-core/gather/gatherers/seo/*.js",
+    "lighthouse-core/gather/gatherers/**/*.js",
     "lighthouse-core/scripts/*.js",
     "lighthouse-core/audits/seo/robots-txt.js",
     "./typings/*.d.ts"
