--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,16 @@
   "include": [
     "lighthouse-cli/**/*.js",
     "lighthouse-core/audits/audit.js",
+    "lighthouse-core/audits/accessibility/**/*.js",
+    "lighthouse-core/audits/manual/**/*.js",
+    "lighthouse-core/audits/seo/manual/*.js",
+    "lighthouse-core/audits/seo/robots-txt.js",
     "lighthouse-core/lib/dependency-graph/**/*.js",
     "lighthouse-core/lib/emulation.js",
     "lighthouse-core/gather/computed/metrics/*.js",
     "lighthouse-core/gather/connections/**/*.js",
     "lighthouse-core/gather/gatherers/**/*.js",
     "lighthouse-core/scripts/*.js",
-    "lighthouse-core/audits/seo/robots-txt.js",
     "./typings/*.d.ts"
   ],
   "exclude": [
