--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,7 @@
     "lighthouse-core/audits/seo/robots-txt.js",
     "lighthouse-core/lib/dependency-graph/**/*.js",
     "lighthouse-core/lib/emulation.js",
-    "lighthouse-core/gather/computed/metrics/*.js",
-    "lighthouse-core/gather/connections/**/*.js",
-    "lighthouse-core/gather/gatherers/**/*.js",
+    "lighthouse-core/gather/**/*.js",
     "lighthouse-core/scripts/*.js",
     "./typings/*.d.ts"
   ],
