core(tsc): add type checking to most byte efficiency audits (#5072)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "lighthouse-core/audits/audit.js",
     "lighthouse-core/audits/accessibility/**/*.js",
     "lighthouse-core/audits/dobetterweb/**/*.js",
+    "lighthouse-core/audits/byte-efficiency/**/*.js",
     "lighthouse-core/audits/manual/**/*.js",
     "lighthouse-core/audits/seo/manual/*.js",
     "lighthouse-core/audits/seo/robots-txt.js",
