core(redirects): use lantern to compute savings (#5081)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
   "include": [
     "lighthouse-cli/**/*.js",
     "lighthouse-core/audits/audit.js",
+    "lighthouse-core/audits/redirects.js",
     "lighthouse-core/audits/accessibility/**/*.js",
     "lighthouse-core/audits/dobetterweb/**/*.js",
     "lighthouse-core/audits/byte-efficiency/**/*.js",
