--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lighthouse",
-  "version": "2.9.1",
+  "version": "3.0.0-alpha",
   "description": "Lighthouse",
   "main": "./lighthouse-core/index.js",
   "bin": {
