core(tsc): add type checking of first top-level audits (#5086)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,22 @@
     "lighthouse-cli/**/*.js",
     "lighthouse-core/audits/audit.js",
     "lighthouse-core/audits/redirects.js",
+    "lighthouse-core/audits/bootup-time.js",
+    "lighthouse-core/audits/content-width.js",
+    "lighthouse-core/audits/deprecations.js",
+    "lighthouse-core/audits/errors-in-console.js",
+    "lighthouse-core/audits/estimated-input-latency.js",
+    "lighthouse-core/audits/first-contentful-paint.js",
+    "lighthouse-core/audits/first-cpu-idle.js",
+    "lighthouse-core/audits/first-meaningful-paint.js",
+    "lighthouse-core/audits/font-display.js",
+    "lighthouse-core/audits/image-aspect-ratio.js",
+    "lighthouse-core/audits/load-fast-enough-for-pwa.js",
+    "lighthouse-core/audits/mainthread-work-breakdown.js",
+    "lighthouse-core/audits/manifest-short-name-length.js",
+    "lighthouse-core/audits/metrics.js",
+    "lighthouse-core/audits/mixed-content.js",
+    "lighthouse-core/audits/network-requests.js",
     "lighthouse-core/audits/accessibility/**/*.js",
     "lighthouse-core/audits/dobetterweb/**/*.js",
     "lighthouse-core/audits/byte-efficiency/**/*.js",
