core(tsc): more type checking of top-level audits (#5089)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,18 @@
     "lighthouse-core/audits/metrics.js",
     "lighthouse-core/audits/mixed-content.js",
     "lighthouse-core/audits/network-requests.js",
+    "lighthouse-core/audits/multi-check-audit.js",
+    "lighthouse-core/audits/redirects-http.js",
+    "lighthouse-core/audits/screenshot-thumbnails.js",
+    "lighthouse-core/audits/service-worker.js",
+    "lighthouse-core/audits/speed-index.js",
+    "lighthouse-core/audits/splash-screen.js",
+    "lighthouse-core/audits/themed-omnibox.js",
+    "lighthouse-core/audits/time-to-first-byte.js",
+    "lighthouse-core/audits/viewport.js",
+    "lighthouse-core/audits/webapp-install-banner.js",
+    "lighthouse-core/audits/without-javascript.js",
+    "lighthouse-core/audits/works-offline.js",
     "lighthouse-core/audits/accessibility/**/*.js",
     "lighthouse-core/audits/dobetterweb/**/*.js",
     "lighthouse-core/audits/byte-efficiency/**/*.js",
