--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,36 +16,7 @@
   },
   "include": [
     "lighthouse-cli/**/*.js",
-    "lighthouse-core/audits/audit.js",
-    "lighthouse-core/audits/redirects.js",
-    "lighthouse-core/audits/bootup-time.js",
-    "lighthouse-core/audits/content-width.js",
-    "lighthouse-core/audits/deprecations.js",
-    "lighthouse-core/audits/errors-in-console.js",
-    "lighthouse-core/audits/estimated-input-latency.js",
-    "lighthouse-core/audits/first-contentful-paint.js",
-    "lighthouse-core/audits/first-cpu-idle.js",
-    "lighthouse-core/audits/first-meaningful-paint.js",
-    "lighthouse-core/audits/font-display.js",
-    "lighthouse-core/audits/image-aspect-ratio.js",
-    "lighthouse-core/audits/load-fast-enough-for-pwa.js",
-    "lighthouse-core/audits/mainthread-work-breakdown.js",
-    "lighthouse-core/audits/manifest-short-name-length.js",
-    "lighthouse-core/audits/metrics.js",
-    "lighthouse-core/audits/mixed-content.js",
-    "lighthouse-core/audits/network-requests.js",
-    "lighthouse-core/audits/multi-check-audit.js",
-    "lighthouse-core/audits/redirects-http.js",
-    "lighthouse-core/audits/screenshot-thumbnails.js",
-    "lighthouse-core/audits/service-worker.js",
-    "lighthouse-core/audits/speed-index.js",
-    "lighthouse-core/audits/splash-screen.js",
-    "lighthouse-core/audits/themed-omnibox.js",
-    "lighthouse-core/audits/time-to-first-byte.js",
-    "lighthouse-core/audits/viewport.js",
-    "lighthouse-core/audits/webapp-install-banner.js",
-    "lighthouse-core/audits/without-javascript.js",
-    "lighthouse-core/audits/works-offline.js",
+    "lighthouse-core/audits/*.js",
     "lighthouse-core/audits/accessibility/**/*.js",
     "lighthouse-core/audits/dobetterweb/**/*.js",
     "lighthouse-core/audits/byte-efficiency/**/*.js",
