tests(viewer): upgrade pptr to handle new CSSOM use in the report (#5191)

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "npm-run-posix-or-windows": "^2.0.2",
     "nyc": "^11.6.0",
     "postinstall-prepare": "^1.0.1",
-    "puppeteer": "^1.1.1",
+    "puppeteer": "1.4.0",
     "sinon": "^2.3.5",
     "typescript": "2.9.0-dev.20180323",
     "vscode-chrome-debug-core": "^3.23.8",
