--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ last-run-results.html
 !lighthouse-core/test/fixtures/artifacts/**/*.devtoolslog.json
 
 latest-run
+lantern-data
 
 closure-error.log
 yarn-error.log
