--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 
     "lighthouse-cli/**/*.js",
     "lighthouse-core/**/*.js",
+    "lighthouse-extension/app/src/*.js",
     "./typings/*.d.ts",
   ],
   "exclude": [
