--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/yargs": "^8.0.2",
     "babel-core": "^6.26.0",
     "bundlesize": "^0.14.4",
+    "chalk": "^2.4.1",
     "codecov": "^2.2.0",
     "commitizen": "^2.9.6",
     "conventional-changelog-cli": "^1.3.4",
