--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "checkJs": true,
     "strict": true,
     // "listFiles": true,
+    // "noErrorTruncation": true,
     "typeRoots": [
       "@types",
       "./typings"
