tests: run the golden LHR check earlier (#5609)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 
     "debug": "node --inspect-brk ./lighthouse-cli/index.js",
     "start": "node ./lighthouse-cli/index.js",
-    "test": "yarn lint --quiet && yarn unit && yarn type-check && yarn diff:sample-json",
+    "test": "yarn diff:sample-json && yarn lint --quiet && yarn unit && yarn type-check",
     "test-extension": "cd lighthouse-extension && yarn test",
     "test-viewer": "cd lighthouse-viewer && yarn pptr-test",
     "test-lantern": "bash lighthouse-core/scripts/test-lantern.sh",
