--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/configstore": "^2.1.1",
     "@types/css-font-loading-module": "^0.0.2",
     "@types/inquirer": "^0.0.35",
+    "@types/intl-messageformat": "^1.3.0",
     "@types/jpeg-js": "^0.3.0",
     "@types/lodash.isequal": "^4.5.2",
     "@types/node": "*",
@@ -96,6 +97,7 @@
     "gulp": "^3.9.1",
     "gulp-replace": "^0.5.4",
     "gulp-util": "^3.0.7",
+    "intl": "^1.2.5",
     "jest": "^23.2.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
@@ -118,6 +120,8 @@
     "esprima": "^4.0.0",
     "http-link-header": "^0.8.0",
     "inquirer": "^3.3.0",
+    "intl-messageformat": "^2.2.0",
+    "intl-messageformat-parser": "^1.4.0",
     "jpeg-js": "0.1.2",
     "js-library-detector": "^4.3.1",
     "lighthouse-logger": "^1.0.0",
