--- a/package.json
+++ b/package.json
@@ -23,16 +23,13 @@
     "build-viewer": "cd ./lighthouse-viewer && yarn build",
     "clean": "rimraf *.report.html *.report.dom.html *.report.json *.screenshots.html *.screenshots.json *.devtoolslog.json *.trace.json || true",
     "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
-
     "smoke": "node lighthouse-cli/test/smokehouse/run-smoke.js",
-
     "debug": "node --inspect-brk ./lighthouse-cli/index.js",
     "start": "node ./lighthouse-cli/index.js",
     "test": "yarn diff:sample-json && yarn lint --quiet && yarn unit && yarn type-check",
     "test-extension": "cd lighthouse-extension && yarn test",
     "test-viewer": "cd lighthouse-viewer && yarn pptr-test",
     "test-lantern": "bash lighthouse-core/scripts/test-lantern.sh",
-
     "unit-core": "jest \"lighthouse-core/\"",
     "unit-core:ci": "jest --runInBand --coverage --ci \"lighthouse-core/\"",
     "unit-cli": "jest  --runInBand \"lighthouse-cli/\"",
@@ -44,14 +41,12 @@
     "cli-unit": "yarn unit-cli",
     "viewer-unit": "yarn unit-viewer",
     "watch": "yarn unit-core --watch",
-
     "unit:silentcoverage": "nyc --silent yarn unit:ci && nyc report --reporter text-lcov > unit-coverage.lcov",
     "coverage": "nyc yarn unit:ci && nyc report --reporter html",
     "smoke:silentcoverage": "nyc --silent yarn smoke && nyc report --reporter text-lcov > smoke-coverage.lcov",
     "coverage:smoke": "nyc yarn smoke && nyc report --reporter html",
     "coveralls": "cat unit-coverage.lcov | coveralls",
     "codecov": "codecov -f unit-coverage.lcov -F unit && codecov -f smoke-coverage.lcov -F smoke",
-
     "devtools": "bash lighthouse-core/scripts/roll-to-devtools.sh",
     "compile-devtools": "bash lighthouse-core/scripts/compile-against-devtools.sh",
     "chrome": "node lighthouse-core/scripts/manual-chrome-launcher.js",
@@ -75,6 +70,7 @@
     "@types/chrome": "^0.0.60",
     "@types/configstore": "^2.1.1",
     "@types/css-font-loading-module": "^0.0.2",
+    "@types/esprima": "^4.0.2",
     "@types/inquirer": "^0.0.35",
     "@types/intl-messageformat": "^1.3.0",
     "@types/jpeg-js": "^0.3.0",
@@ -119,7 +115,7 @@
     "chrome-launcher": "^0.10.2",
     "configstore": "^3.1.1",
     "devtools-timeline-model": "1.1.6",
-    "esprima": "^4.0.0",
+    "esprima": "^4.0.1",
     "http-link-header": "^0.8.0",
     "inquirer": "^3.3.0",
     "intl-messageformat": "^2.2.0",
@@ -167,7 +163,10 @@
     }
   ],
   "nyc": {
-    "reporter": ["lcov", "text"],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
     "tempDirectory": "./coverage",
     "exclude": [
       "**/third_party/**",
