core(i18n): add locale fallback when language not supported (#5746)

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "js-library-detector": "^4.3.1",
     "lighthouse-logger": "^1.0.0",
     "lodash.isequal": "^4.5.0",
+    "lookup-closest-locale": "6.0.4",
     "metaviewport-parser": "0.2.0",
     "mkdirp": "0.5.1",
     "opn": "4.0.2",
