--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "rimraf": "^2.6.1",
     "robots-parser": "^2.0.1",
     "semver": "^5.3.0",
-    "speedline": "1.3.3",
+    "speedline-core": "1.4.0",
     "update-notifier": "^2.1.0",
     "ws": "3.3.2",
     "yargs": "3.32.0",
