--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "pretty-json-stringify": "^0.0.2",
     "puppeteer": "1.4.0",
     "sinon": "^2.3.5",
-    "typescript": "3.0.1",
+    "typescript": "3.1.0-dev.20180831",
     "vscode-chrome-debug-core": "^3.23.8",
     "zone.js": "^0.7.3"
   },
