--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "zone.js": "^0.7.3"
   },
   "dependencies": {
-    "axe-core": "3.0.0-beta.2",
+    "axe-core": "3.1.1",
     "chrome-devtools-frontend": "1.0.422034",
     "chrome-launcher": "^0.10.2",
     "configstore": "^3.1.1",
