--- a/lighthouse-extension/package.json
+++ b/lighthouse-extension/package.json
@@ -17,7 +17,6 @@
     "browserify": "^16.2.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-chrome-manifest": "0.0.13",
     "gulp-debug": "^2.1.2",
     "gulp-eslint": "^4.0.2",
     "gulp-header": "^1.8.9",
@@ -26,8 +25,7 @@
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.2.0",
     "package-json-versionify": "^1.0.4",
-    "run-sequence": "^1.1.5",
-    "through2": "^2.0.1"
+    "run-sequence": "^1.1.5"
   },
   "resolutions": {
     "browserify/insert-module-globals/lexical-scope/astw": "2.2.0",
