--- a/package.json
+++ b/package.json
@@ -69,14 +69,20 @@
     "build-proto": "cd proto/scripts && PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=cpp PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION_VERSION=2 python json_roundtrip_via_proto.py"
   },
   "devDependencies": {
+    "@types/archiver": "^2.1.2",
+    "@types/babel-core": "^6.25.5",
+    "@types/browserify": "^12.0.36",
     "@types/chrome": "^0.0.60",
     "@types/configstore": "^2.1.1",
+    "@types/cpy": "^5.1.0",
     "@types/css-font-loading-module": "^0.0.2",
+    "@types/del": "^3.0.1",
     "@types/esprima": "^4.0.2",
     "@types/inquirer": "^0.0.35",
     "@types/intl-messageformat": "^1.3.0",
     "@types/jpeg-js": "^0.3.0",
     "@types/lodash.isequal": "^4.5.2",
+    "@types/make-dir": "^1.0.3",
     "@types/node": "*",
     "@types/opn": "^3.0.28",
     "@types/raven": "^2.5.1",
@@ -85,15 +91,21 @@
     "@types/ws": "^4.0.1",
     "@types/yargs": "^8.0.2",
     "angular": "^1.7.4",
+    "archiver": "^3.0.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "brfs": "^1.6.1",
+    "browserify": "^16.2.3",
     "bundlesize": "^0.14.4",
     "chalk": "^2.4.1",
     "codecov": "^2.2.0",
     "commitizen": "^2.9.6",
     "conventional-changelog-cli": "^1.3.4",
     "coveralls": "^2.11.9",
+    "cpy": "^7.0.1",
     "csv-validator": "^0.0.3",
     "cz-customizable": "^5.2.0",
+    "del": "^3.0.0",
     "devtools-protocol": "0.0.588129",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
@@ -103,9 +115,11 @@
     "intl": "^1.2.5",
     "jest": "^23.2.0",
     "jsdom": "^9.12.0",
+    "make-dir": "^1.3.0",
     "mocha": "^3.2.0",
     "npm-run-posix-or-windows": "^2.0.2",
     "nyc": "^11.6.0",
+    "package-json-versionify": "^1.0.4",
     "postinstall-prepare": "^1.0.1",
     "pretty-json-stringify": "^0.0.2",
     "puppeteer": "1.4.0",
