misc: remove plots/ (#6346)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -18,4 +18,4 @@ lighthouse-viewer/                  @ebidel             @brendankenny
 docs/                               @paulirish
 proto/                              @brendankenny       @exterkamp
 
-# no explicit owner for plots, travis, etc
+# no explicit owner for travis, etc
