core: remove last dependency on WebInspector (#6209)
rewrite font-size gatherer to work without it

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-util": "^3.0.7",
     "intl": "^1.2.5",
-    "jest": "^23.2.0",
+    "jest": "^23.6.0",
     "jsdom": "^9.12.0",
     "make-dir": "^1.3.0",
     "mocha": "^3.2.0",
@@ -120,6 +120,7 @@
     "nyc": "^11.6.0",
     "package-json-versionify": "^1.0.4",
     "postinstall-prepare": "^1.0.1",
+    "prettier": "^1.14.3",
     "pretty-json-stringify": "^0.0.2",
     "puppeteer": "1.4.0",
     "sinon": "^2.3.5",
@@ -128,11 +129,9 @@
   },
   "dependencies": {
     "axe-core": "3.0.0-beta.2",
-    "chrome-devtools-frontend": "1.0.593291",
     "chrome-launcher": "^0.10.5",
     "configstore": "^3.1.1",
     "cssstyle": "1.1.1",
-    "devtools-timeline-model": "1.1.6",
     "esprima": "^4.0.1",
     "http-link-header": "^0.8.0",
     "inquirer": "^3.3.0",
