core(perf): add timing instrumentation to measure runtime perf (#3745)

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "fast": "yarn start --disable-device-emulation --throttlingMethod=provided",
     "deploy-viewer": "cd lighthouse-viewer && gulp deploy",
     "bundlesize": "bundlesize",
+    "plots-smoke": "bash plots/test/smoke.sh",
+    "timing-trace": "node lighthouse-core/scripts/generate-timing-trace.js",
     "changelog": "conventional-changelog --config ./build/changelog-generator/index.js --infile changelog.md --same-file",
     "type-check": "tsc -p . && cd ./lighthouse-viewer && yarn type-check",
     "i18n:checks": "./lighthouse-core/scripts/i18n/assert-strings-collected.sh",
@@ -139,7 +141,7 @@
     "intl-messageformat-parser": "^1.4.0",
     "jpeg-js": "0.1.2",
     "js-library-detector": "^5.1.0",
-    "lighthouse-logger": "^1.0.0",
+    "lighthouse-logger": "^1.2.0",
     "lodash.isequal": "^4.5.0",
     "lookup-closest-locale": "6.0.4",
     "metaviewport-parser": "0.2.0",
