--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "devtools-protocol": "0.0.588129",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "gh-pages": "0.12.0",
+    "gh-pages": "^2.0.1",
     "glob": "^7.1.3",
     "gulp": "^3.9.1",
     "gulp-replace": "^0.5.4",
