--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "postinstall-prepare": "^1.0.1",
     "prettier": "^1.14.3",
     "pretty-json-stringify": "^0.0.2",
-    "puppeteer": "1.4.0",
+    "puppeteer": "^1.10.0",
     "sinon": "^2.3.5",
     "typescript": "3.1.3",
     "uglify-es": "3.0.15",
