--- a/package.json
+++ b/package.json
@@ -141,9 +141,9 @@
     "configstore": "^3.1.1",
     "cssstyle": "1.1.1",
     "details-element-polyfill": "2.1.1",
+    "enquirer": "^2.0.7",
     "esprima": "^4.0.1",
     "http-link-header": "^0.8.0",
-    "inquirer": "^3.3.0",
     "intl-messageformat": "^2.2.0",
     "intl-messageformat-parser": "^1.4.0",
     "jpeg-js": "0.1.2",
