Add jest-mock dependency

--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "inquirer": "^3.3.0",
     "intl-messageformat": "^2.2.0",
     "intl-messageformat-parser": "^1.4.0",
+    "jest-mock": "^24.3.0",
     "jpeg-js": "0.1.2",
     "js-library-detector": "^5.1.0",
     "lighthouse-logger": "^1.2.0",
