--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean": "rimraf dist proto/scripts/*.json proto/scripts/*_pb2.* proto/scripts/*_pb.* proto/scripts/__pycache__ proto/scripts/*.pyc *.report.html *.report.dom.html *.report.json *.devtoolslog.json *.trace.json || true",
     "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
     "smoke": "node lighthouse-cli/test/smokehouse/run-smoke.js",
+    "smokev2": "jest \"lighthouse-cli/test/smokes-test.js\" ",
     "debug": "node --inspect-brk ./lighthouse-cli/index.js",
     "start": "node ./lighthouse-cli/index.js",
     "test": "yarn diff:sample-json && yarn lint --quiet && yarn unit && yarn type-check",
@@ -28,7 +29,7 @@
     "test-viewer": "yarn unit-viewer && jest lighthouse-viewer/test/viewer-test-pptr.js",
     "test-lantern": "bash lighthouse-core/scripts/test-lantern.sh",
     "unit-core": "jest \"lighthouse-core/\"",
-    "unit-cli": "jest \"lighthouse-cli/\"",
+    "unit-cli": "jest \"lighthouse-cli/\" ----testPathIgnorePatterns=\"smokes-test\"",
     "unit-viewer": "jest \"lighthouse-viewer/.*-test.js\"",
     "unit": "yarn unit-core && yarn unit-cli && yarn unit-viewer",
     "unit:ci": "npm run unit-core -- --runInBand --ci --coverage && npm run unit-cli -- --runInBand --ci --coverage && npm run unit-viewer -- --runInBand --ci --coverage",
@@ -39,9 +40,11 @@
     "unit:cicoverage": "nyc --all --hook-run-in-context npm run unit:ci && nyc report --reporter text-lcov > unit-coverage.lcov",
     "coverage": "yarn unit:cicoverage && nyc report --reporter html",
     "smoke:cicoverage": "nyc npm run smoke && nyc report --reporter text-lcov > smoke-coverage.lcov",
+    "smokev2:cicoverage": "nyc --all --hook-run-in-context npm run smokev2 && nyc report --reporter text-lcov > smokev2-coverage.lcov",
     "coverage:smoke": "yarn smoke:cicoverage && nyc report --reporter html",
+    "coverage:smokev2": "yarn smokev2:cicoverage && nyc report --reporter html",
     "coveralls": "cat unit-coverage.lcov | coveralls",
-    "codecov": "codecov -f unit-coverage.lcov -F unit && codecov -f smoke-coverage.lcov -F smoke",
+    "codecov": "codecov -f unit-coverage.lcov -F unit && codecov -f smoke-coverage.lcov -F smoke && codecov -f smokev2-coverage.lcov -F smokev2",
     "devtools": "bash lighthouse-core/scripts/roll-to-devtools.sh",
     "compile-devtools": "bash lighthouse-core/scripts/compile-against-devtools.sh",
     "chrome": "node lighthouse-core/scripts/manual-chrome-launcher.js",
