--- a/package.json
+++ b/package.json
@@ -65,11 +65,14 @@
     "static-server": "node lighthouse-cli/test/fixtures/static-server.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-syntax-async-generators": "^7.2.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@firebase/app-types": "0.3.1",
     "@firebase/auth-types": "0.3.2",
     "@firebase/util": "0.2.1",
     "@types/archiver": "^2.1.2",
-    "@types/babel-core": "^6.25.5",
+    "@types/babel-core": "^6.25.6",
     "@types/browserify": "^12.0.36",
     "@types/chrome": "^0.0.60",
     "@types/configstore": "^2.1.1",
@@ -96,10 +99,10 @@
     "@types/yargs": "^8.0.2",
     "angular": "^1.7.4",
     "archiver": "^3.0.0",
-    "babel-core": "^6.26.0",
     "babel-plugin-add-header-comment": "^1.0.3",
     "babel-plugin-syntax-async-generators": "^6.13.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babelify": "^10.0.0",
     "brfs": "^2.0.2",
     "browserify": "^16.2.3",
     "bundlesize": "^0.17.2",
