--- a/.bazelrc
+++ b/.bazelrc
@@ -46,7 +46,7 @@ test --test_output=errors
 #     Rules may change their build outputs if the DEBUG environment variable is set. For example,
 #     mininfiers such as terser may make their output more human readable when this is set. `DEBUG` will be passed to
 #     `nodejs_binary` and `nodejs_test` via the default value of the `default_env_vars` attribute of those rules.
-test:debug --test_output=streamed --test_strategy=exclusive --test_timeout=9999 --nocache_test_results --define=VERBOSE_LOGS=1
+test:debug --test_output=streamed --test_strategy=exclusive --test_timeout=999 --nocache_test_results --define=VERBOSE_LOGS=1
 # Use bazel run with `--config=debug` to turn on the NodeJS inspector agent.
 # The node process will break before user code starts and wait for the debugger to connect.
 run:debug --define=VERBOSE_LOGS=1 -- --node_options=--inspect-brk
@@ -81,13 +81,17 @@ run --incompatible_strict_action_env
 # rather than user.bazelrc as suggested in the Bazel docs)
 try-import %workspace%/.bazelrc.user
 
-test:debug --test_arg=--node_options=--inspect-brk --test_output=streamed --test_strategy=exclusive --test_timeout=9999 --nocache_test_results
+# test:debug --test_arg=--node_options=--inspect-brk
 
 ### Environment variables
 
 run:remote --action_env=RBE=1
+test:remote --action_env=RBE=1
 # Verbose output for smoke tests.
 run --action_env=LH_SMOKE_VERBOSE=1
+test --action_env=LH_SMOKE_VERBOSE=1
+
+test:blah --action_env=LH_SMOKE_VERBOSE=1
 
 ### RBE
 # https://github.com/bazelbuild/bazel-toolchains/blob/master/bazelrc/bazel-0.29.0.bazelrc
