--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -38,6 +38,10 @@ filegroup(
     # cli-flags.js reads this.
     "//:package.json"
   ],
+  templated_args = [
+    "--chrome-flags='--headless --no-sandbox'",
+    "--GA=$TEST_UNDECLARED_OUTPUTS_DIR",
+  ],
   # testonly = True,
   data = [
     # '@org_chromium_chromium//file',
