--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -49,7 +49,7 @@ nodejs_test(
   name = "lighthouse",
   entry_point = "//:lighthouse-cli",
   templated_args = [
-    "--chrome-flags='--headless --no-sandbox'",
+    "--chrome-flags=--headless --no-sandbox",
     "--GA=$TEST_UNDECLARED_OUTPUTS_DIR",
   ],
   # testonly = True,
